Fix: Use proper translations used to prevent blurry icons in toolbar on Firefox.

--- a/theme/components/dropdown.scss
+++ b/theme/components/dropdown.scss
@@ -15,7 +15,7 @@
 
 		position: absolute;
 		top: 50%;
-		transform: translate( 0, -50% );
+		transform: translate3d( 0, -50%, 0 );
 	}
 }
 
@@ -29,9 +29,11 @@
 
 	position: absolute;
 	left: 0px;
-	transform: translateY( 100% );
+	transform: translate3d( 0, 100%, 0 );
 
 	&-visible {
 		display: inline-block;
+		// This will prevent blurry icons in dropdown on Firefox. See #340.
+		will-change: transform;
 	}
 }
